force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Read_Only__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to mark the question as a read only question. Survey/Form participants will not be able to update answer of a read only question.</description>
    <inlineHelpText>Enable to mark the question as a read only question. Survey/Form participants will not be able to update answer of a read only question.</inlineHelpText>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>