force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Record_Limit__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Maximum number of records to retrieve. Applies to Salesforce Data Questions only.</description>
    <inlineHelpText>Maximum number of records to retrieve.</inlineHelpText>
    <label>Record Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>