force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Reverse_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Reverse_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables to display NPS 10-0 instead of 0-10 choices order.</description>
    <inlineHelpText>Enables to display NPS 10-0 instead of 0-10 choices order.</inlineHelpText>
    <label>Reverse Order</label>
    <type>Checkbox</type>
</CustomField>