force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Root_Version__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Root_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Root question in the version chain.</description>
    <inlineHelpText>Root question in the version chain.</inlineHelpText>
    <label>Root Version</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Child Versions</relationshipLabel>
    <relationshipName>Child_Version</relationshipName>
    <type>Lookup</type>
</CustomField>