force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Salesforce_Record_Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Salesforce_Record_Hierarchy_Type__c</fullName>
    <description>Dynamic answer choices will be presented from one object or two objects using the records with a matching criteria.</description>
    <inlineHelpText>Dynamic answer choices will be presented from one object or two objects using the records with a matching criteria.</inlineHelpText>
    <label>Salesforce Record Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hierarchy using single object</fullName>
            </value>
            <value>
                <fullName>Hierarchy using two objects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>