force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Section__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Question is part of this section.</description>
    <inlineHelpText>Question is part of this section.</inlineHelpText>
    <label>Section</label>
    <referenceTo>ArdiraSurvey__Section__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>