force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Select_Signature_Box_Size__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Select_Signature_Box_Size__c</fullName>
    <description>Signature Box size.</description>
    <inlineHelpText>Select signature box size.</inlineHelpText>
    <label>Select Signature Box Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small (60px x 210px)</fullName>
            </value>
            <value>
                <fullName>Medium (80px × 280px)</fullName>
            </value>
            <value>
                <fullName>Large (100px x 350px)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>