force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Selected_Child_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Selected_Child_Field_API_Name__c</fullName>
    <description>Dynamic answer choices will be presented using the records of a child object meeting a matching criteria.</description>
    <inlineHelpText>Dynamic answer choices will be presented using the records of a child object meeting a matching criteria.</inlineHelpText>
    <label>Selected Child Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>