force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Selected_Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Selected_Child_Object_API_Name__c</fullName>
    <description>Select a Child Object to be used to present dynamic choices.</description>
    <inlineHelpText>Select a Child Object to be used to present dynamic choices.</inlineHelpText>
    <label>Selected Child Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>