force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Selected_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Selected_Field_API_Name__c</fullName>
    <description>Dynamic answer choices will be presented from a picklist field or using the records of an object meeting a matching criteria.</description>
    <inlineHelpText>Dynamic answer choices will be presented from a picklist field or using the records of an object meeting a matching criteria.</inlineHelpText>
    <label>Selected Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>