force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Sentiment_Insights_Preferences__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Sentiment_Insights_Preferences__c</fullName>
    <description>Customize your Sentiment Insight Analysis preferences by selecting the types of insights you want SurveyVista to analyze from your survey responses. Choose from the following options:
    Key Phrases: Enable to identify significant phrases within survey responses, such as key topics, themes, or subjects.
    Sentiment: Enable to analyze the overall sentiment expressed in survey responses, categorizing them as positive, neutral, negative, or mixed.
    Targeted Sentiment: Enable to evaluate sentiment associated with specific entities mentioned in survey responses, providing insights into how respondents feel about particular topics or entities.</description>
    <inlineHelpText>Customize your Sentiment Insight Analysis preferences by selecting the types of insights you want SurveyVista to analyze from your survey responses.</inlineHelpText>
    <label>Sentiment Insights Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key_Phrases</fullName>
                <label>Key Phrases</label>
            </value>
            <value>
                <fullName>Sentiment</fullName>
            </value>
            <value>
                <fullName>Targeted_Sentiment</fullName>
                <label>Targeted Sentiment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>