force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Show_Choices_Order_by_Rank__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Choices_Order_by_Rank__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, answer choices will be displayed ordered by rank.</description>
    <inlineHelpText>When enabled, answer choices will be displayed ordered by rank.</inlineHelpText>
    <label>Show Choices Order by Rank</label>
    <type>Checkbox</type>
</CustomField>