force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Show_Color_Coding_to_NPS_answer_scale__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Color_Coding_to_NPS_answer_scale__c</fullName>
    <defaultValue>true</defaultValue>
    <description>On Check of this field it will allow user to show color for answer scale</description>
    <inlineHelpText>Enable to color code an answer scale.</inlineHelpText>
    <label>Color Code Answer Scale</label>
    <type>Checkbox</type>
</CustomField>