force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Show_Incorrect_Answer_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Incorrect_Answer_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, if a question response is incorrect, it will display the validation error message.</description>
    <inlineHelpText>When enabled, if a question response is incorrect, it will display the validation error message.</inlineHelpText>
    <label>Show Validation Error</label>
    <type>Checkbox</type>
</CustomField>