force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Show_Select_All_Clear_All__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Select_All_Clear_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to allow Select All answer choices or Clear All answer choices for the question response.</description>
    <inlineHelpText>Enable to allow Select All answer choices or Clear All answer choices for the question response.</inlineHelpText>
    <label>Show Select All / Clear All</label>
    <type>Checkbox</type>
</CustomField>