force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Show_Validation_Error_Popup__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Show_Validation_Error_Popup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, if there is a validation error or answer is incorrect, it will display the validation error message in a popup with Back button and optional action button.</description>
    <inlineHelpText>When enabled, if there is a validation error or answer is incorrect, it will display the validation error message in a popup with Back button and optional action button.</inlineHelpText>
    <label>Show Validation Error Popup</label>
    <type>Checkbox</type>
</CustomField>