force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Skip_Rule__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Skip_Rule__c</fullName>
    <description>Rule using target object fields to be evaluated at runtime to decide if the question has to be displayed for response. Result of the rule is used to set &quot;Response Not Required&quot; field of question result.</description>
    <inlineHelpText>A rule using the target record fields that is evaluated when a survey is sent to a recipient. A question is skipped when the rule evaluates to true.</inlineHelpText>
    <label>Skip Rule</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>