force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Slider_Scale_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Slider_Scale_Label__c</fullName>
    <description>Label for Slider.</description>
    <inlineHelpText>Label to describe the slider scale.</inlineHelpText>
    <label>Slider Scale Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>