force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Sort_Values_By_Field__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Sort_Values_By_Field__c</fullName>
    <description>By default, values are presented in alphabetical order. For custom order, you can select a field to order values by the field value.</description>
    <inlineHelpText>By default, values are presented in alphabetical order. For custom order, you can select a field to order values by the field value.</inlineHelpText>
    <label>Sort Values By Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>