force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Standard_Lightning_Tree_Grid__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Standard_Lightning_Tree_Grid__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, standard Salesforce lightning tree grid behavior will apply.</description>
    <inlineHelpText>When checked, standard Salesforce lightning tree grid behavior will apply.</inlineHelpText>
    <label>Standard Lightning Tree Grid</label>
    <type>Checkbox</type>
</CustomField>