force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Start_Date__c</fullName>
    <inlineHelpText>Select Start Date of Custom Date Range</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>