force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Start_Position__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Start_Position__c</fullName>
    <description>Starting position for slider button.</description>
    <inlineHelpText>Select a starting position for a slider scale.</inlineHelpText>
    <label>Start Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
                <default>true</default>
                <label>Center</label>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>