force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Step_Size__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Step_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Step size for slider.</description>
    <inlineHelpText>The interval the slider moves by.</inlineHelpText>
    <label>Step Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>