force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Question is part of this survey.</description>
    <inlineHelpText>Question is part of this survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>