force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Survey_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Display_Order__c</fullName>
    <description>Order in which this question is displayed in a survey. This is a concatenation of the section display order and this questions display order. A typical value will be concatenation of two three character strings (005 002). One representing the display order of section and other representing the display order of the question itself. This is not applicable for sub questions of a grid question.</description>
    <inlineHelpText>Order in which this question is displayed in a survey. This is a concatenation of the section display order and this questions display order.</inlineHelpText>
    <label>Survey Display Order</label>
    <length>64</length>
    <type>Text</type>
</CustomField>