force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Survey_Result_Field_as_Response__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result_Field_as_Response__c</fullName>
    <description>Allow a user to select a survey result field to present as the question response field.</description>
    <inlineHelpText>Select a survey result field that would allow responder to enter the field value when responding to the question.</inlineHelpText>
    <label>Survey Result Field as Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>