force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Survey_Result_Response_Field_DataType__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result_Response_Field_DataType__c</fullName>
    <description>Data type of the field that is configured as the question response field.</description>
    <inlineHelpText>Data type of the field that is configured as the question response field.</inlineHelpText>
    <label>Survey Result Response Field DataType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>