force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Text_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Text_Max_Length__c</fullName>
    <description>Maximum length of the response to a text question.</description>
    <inlineHelpText>The maximum number of characters allowed in the question response.</inlineHelpText>
    <label>Text Question - Max Length</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>