force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Thank_You_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Thank_You_Button_Label__c</fullName>
    <description>Label for thank you button.</description>
    <inlineHelpText>The thank you button label. If label is empty, the thank you button is not displayed.</inlineHelpText>
    <label>Thank You Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>