force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Thank_You_Button_Link_URL_Long__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Thank_You_Button_Link_URL_Long__c</fullName>
    <description>URL to redirect when thank you button is clicked.</description>
    <inlineHelpText>When the thank you button is clicked, a survey participant is redirected to this URL.</inlineHelpText>
    <label>Thank You Button Link URL - Long</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>