force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__True_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__True_Label__c</fullName>
    <description>A true label used for yes / no question true option</description>
    <inlineHelpText>Label to use for Yes, Like, Switch On, True, or Checkbox Checked</inlineHelpText>
    <label>True Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>