force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Unique_Values_Only__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Unique_Values_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is checked, It will present only unique values to survey responder.</description>
    <inlineHelpText>When this checkbox is checked, It will present only unique values to survey responder.</inlineHelpText>
    <label>Present Unique Values Only</label>
    <type>Checkbox</type>
</CustomField>