force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validation_Error_Message__c</fullName>
    <description>This field is used to store custom validation message, which is displayed when response validation rules fails.</description>
    <inlineHelpText>Configure the message to be displayed when the validation rule evaluates to false.</inlineHelpText>
    <label>Validation Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>