force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Validation_Popup_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validation_Popup_Action_Button_Label__c</fullName>
    <description>When the action button label is provided, on click of button a survey participant is redirected to action button link URL. If label is empty, the action button is not displayed in the popup.</description>
    <inlineHelpText>When the action button label is provided, on click of button a survey participant is redirected to action button link URL. If label is empty, the action button is not displayed in the popup.</inlineHelpText>
    <label>Validation Popup Action Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>