force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Validation_Popup_Action_Button_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validation_Popup_Action_Button_Link_URL__c</fullName>
    <description>When the action button is clicked in the popup, a survey participant is redirected to this URL.</description>
    <inlineHelpText>When the action button is clicked in the popup, a survey participant is redirected to this URL.</inlineHelpText>
    <label>Validation Popup Action Button Link URL</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>