force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Validation_Rule_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validation_Rule_JSON__c</fullName>
    <description>This field is used to store Response Validation Rules in a form of JSON string.</description>
    <inlineHelpText>Stores a validation rule to validate a question response. When the rule evaluates to false, the question response will not be accepted.</inlineHelpText>
    <label>Validation Rule JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>