force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Validation_Rule_Regex__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Validation_Rule_Regex__c</fullName>
    <description>To store validation regex pattern.</description>
    <inlineHelpText>Enter a regular expression (regex) pattern to define the validation rule for this field. The pattern will be used to validate the input data.</inlineHelpText>
    <label>Validation Rule Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>