force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Video_File_or_Link__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Video_File_or_Link__c</fullName>
    <description>For Native Salesforce, upload a video as a file and then enter the file id or name. For other sources, enter the video url.</description>
    <inlineHelpText>For Native Salesforce, upload a video as a file and then enter the file id or name. For other sources, enter the embed video URL from the source.</inlineHelpText>
    <label>Video File or Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>