force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Video_Source__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Video_Source__c</fullName>
    <description>Select the source of the video</description>
    <inlineHelpText>Select the source of the video</inlineHelpText>
    <label>Video Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native Salesforce</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Vimeo</fullName>
            </value>
            <value>
                <fullName>Google Drive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>