force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Weight__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Question weight to be used when scoring the survey.</description>
    <inlineHelpText>Specify the question weight to influence the survey scoring.</inlineHelpText>
    <label>Weight</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>